# RayTracingCpp

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Objects/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp  IRenderable.cpp  IRenderable.hpp  Light.cpp  Light.hpp  Plane.cpp  Plane.h  Plane.hpp  Renderable.cpp  Renderable.hpp  Sphere.cpp  Sphere.hpp  Torus.cpp  Torus.hpp
src/RayTracing/: CMakeLists.txt  RayTracing.cpp  RayTracing.hpp
src/Utilities/: CMakeLists.txt  Math.hpp  RGB.cpp  RGB.hpp  Ray.hpp
tests/: CMakeLists.txt  TorusTests.cpp
